--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
   },
   "dependencies": {
     "@types/expo__vector-icons": "^9.0.1",
+    "axios": "^0.19.0",
     "expo": "^32.0.6",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-button": "^2.4.0",
+    "react-native-google-autocomplete": "^0.1.7",
+    "react-native-google-places-autocomplete": "^1.3.9",
     "react-native-safe-area-view": "^0.14.6",
     "react-native-shadow": "^1.2.2",
     "react-navigation": "^3.11.0",
-    "react-navigator": "0.0.0-0"
+    "react-navigator": "0.0.0-0",
+    "react-redux": "6.0.1",
+    "redux": "^4.0.4",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
