--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-shadow": "^1.2.2",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-swiper": "^1.5.14",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.1",
     "react-navigation": "^3.6.1",
     "react-redux": "^6.0.1",
