--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-lazyload-deux": "^2.0.4",
     "react-native-maps": "^0.23.0",
+    "react-native-maps-directions": "^1.7.0",
     "react-native-masked-text": "^1.11.1",
     "react-native-modal": "^9.0.0",
     "react-native-modalbox": "^1.7.1",
