--- a/package.json
+++ b/package.json
@@ -12,21 +12,24 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "expo": "^32.0.6",
+    "expo": "^33.0.0",
+    "expo-asset": "~6.0.0",
+    "expo-location": "~5.0.1",
     "js-sha256": "^0.9.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-button": "^2.2.0",
     "react-native-countdown-component": "^2.5.2",
     "react-native-drawer": "^2.5.0",
     "react-native-elements": "^1.1.0",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-gesture-recognizers": "^0.3.0",
     "react-native-google-maps-directions": "^2.0.0",
     "react-native-image-cache-hoc": "^2.0.0",
     "react-native-image-zoom-viewer": "^2.2.25",
     "react-native-lazyload-deux": "^2.0.4",
-    "react-native-maps": "^0.23.0",
+    "react-native-maps": "^0.24.0",
     "react-native-maps-directions": "^1.7.0",
     "react-native-masked-text": "^1.11.1",
     "react-native-modal": "^9.0.0",
@@ -35,12 +38,14 @@
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^6.1.0",
     "react-native-popup-dialog": "^0.18.3",
+    "react-native-reanimated": "^1.2.0",
     "react-native-shadow": "^1.2.2",
     "react-native-snap-carousel": "^3.7.5",
+    "react-native-svg": "^9.9.4",
     "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.1",
-    "react-navigation": "^3.6.1",
+    "react-navigation": "^3.11.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
