--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^33.0.0",
-    "expo-asset": "~6.0.0",
+    "expo-asset": "^7.0.0",
     "expo-location": "~5.0.1",
     "js-sha256": "^0.9.0",
     "react": "16.8.3",
